Apply reviewer's comments
Signed-off-by: Romain Courtier <romain.courtier@rte-france.com>